<?xml version="1.0" encoding="utf-8"?>
<resources>
    xmlns:tools="http://schemas.android.com/tools"
    <string name="app_name">Exoskeleton Survey</string>
    <string name="welcome">Welcome to the experiment survey</string>
    <string name="splash_string">Please input the subject ID.</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="submit_button">Submit</string>
    <string name="continue_button">Continue</string>
    <string name="connect_button">Connect</string>
    <string name="back_button">Back</string>
    <string name="checkbox">I felt no difference between trials.</string>

    <!-- Preliminary Question -->
    <string name="feel">Did you feel/notice a difference compared to the previous trial?</string>

    <!-- VAS-RRP question -->
    <string name="VLa1">Previous Trial</string>
    <string name="VLa2">Current Trial</string>

    <!-- VAS Questions -->
    <string name="q1">How comfortable are you?</string>
    <string name="q1_e1">Extremely\nUncomfortable</string>
    <string name="q1_e2">Extremely\nComfortable</string>
    <string name="q2">How helpful is the exoskeleton at toe-off?</string>
    <string name="q2_e1">Extremely\nUnhelpful</string>
    <string name="q2_e2">Extremely\nHelpful</string>

    <!-- rest of the questions
    <string name="q2">How difficult is walking?</string>
    <string name="q2_e1">Hardest walking imaginable</string>
    <string name="q2_e2">Easiest walking imaginable</string>
    <string name="q3">How restricted do you feel?</string>
    <string name="q3_e1">Restricted movement</string>
    <string name="q3_e2">Unrestricted movement</string>
    <string name="q4">How helpful is the exoskeleton?</string>
    <string name="q4_e1">Unhelpful</string>
    <string name="q4_e2">Helpful</string>
    <string name="q5">How effortless is walking?</string>
    <string name="q5_e1">Requires enormous effort</string>
    <string name="q5_e2">Requires negligible effort</string>
    <string name="q6">How well does the device comply with movement?</string>
    <string name="q6_e1">Device is non-compliant</string>
    <string name="q6_e2">Device is compliant</string>
    <string name="q7">How often is the exoskeleton in sync?</string>
    <string name="q7_e1">Never in sync</string>
    <string name="q7_e2">Always in sync</string>
    <string name="q8">How well does the exoskeleton respond?</string>
    <string name="q8_e1">Unresponsive</string>
    <string name="q8_e2">Responsive</string>
    <string name="q9">How natural does walking feel?</string>
    <string name="q9_e1">Unnatural</string>
    <string name="q9_e2">Natural</string>
    <string name="q10">How long would you be okay with wearing the exoskeleton?</string>
    <string name="q10_e1">Want it off now</string>
    <string name="q10_e2">Could wear it all day</string>
    -->

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
    <string name="default_web_client_id">512520005496-2aiia6v391stb7183tfh60ir8dmmef17.apps.googleusercontent.com</string>

</resources>
