<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="10sp"
    android:weightSum="5" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        style="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/splashscreen_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_string"
        style="@android:style/TextAppearance.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2" >

        <EditText
            android:id="@+id/subjectIDeditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:hint="Subject ID"
            style="@android:style/TextAppearance.Small"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2" >
        <Button
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Small"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/continue_button"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
