<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextQuestion"
        android:text="@string/continue_button"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBottom"
        app:layout_constraintVertical_bias="0.75" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="1232dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="false"
        android:contextClickable="false"
        android:focusable="false"
        android:max="100"
        android:min="0"
        android:progress="35"
        android:progressBackgroundTint="#838383"
        android:progressDrawable="@drawable/seek_bar"
        android:progressTint="#838383"
        android:thumb="@android:color/transparent"
        android:thumbTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <SeekBar
        android:id="@+id/seekBarBottom"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:max="100"
        android:min="0"
        android:progress="0"
        android:progressBackgroundTint="#00000000"
        android:progressDrawable="@drawable/seek_bar"
        android:progressTint="#00000000"
        android:thumb="@drawable/seek_thumb2"
        android:thumbOffset="8dp"
        android:thumbTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBarTop"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:clickable="false"
        android:contextClickable="false"
        android:focusable="false"
        android:max="100"
        android:min="0"
        android:progress="0"
        android:progressBackgroundTint="#00000000"
        android:progressTint="#00000000"
        android:rotationX="180"
        android:thumb="@drawable/seek_thumb2"
        android:thumbOffset="8dp"
        android:thumbTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/La1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/q1_e1"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/La7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/q1_e2"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>